cluster/linkerd/httproute-blog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: blog
spec:
  parentRefs:
    - name: ghost
      kind: Service
      group: ""
      port: 80
  rules:
    - timeouts:
        request: 30s
